--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.3.7"
+		"php": ">=5.3.7",
+		"phpoffice/phpword": "^1.3",
+		"tecnickcom/tcpdf": "^6.7",
+		"phpoffice/phpexcel": "^1.8"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
